# rusty_math

./: Cargo.toml  LICENCE  README.md
src/: calculus.rs  clustering.rs  distributions.rs  equations.rs  knn.rs  lib.rs  linear.rs  metrics.rs  naive_bayes.rs  numbers.rs
