[package]
name = "rusty_math"
version = "0.3.0"
edition = "2021"
author = "Kshitij Makwana"
description = "rusty_math is a collection of mathematical functions implemented in Rust"
repository = "https://github.com/kjmakwana/rusty_math"
license-file = "LICENSE"
readme = "README.md"
keywords = ["regression in rust", "rusty math", "linear algebra in rust", "precision in rust"]

[dependencies]
