[package]
name = "rusty_math"
version = "0.6.0"
edition = "2021"
author = "Kshitij Makwana"
description = "This is a Rust library for mathematical, statistical and machine learning operations."
repository = "https://github.com/kjmakwana/rusty_math"
license-file = "LICENSE"
readme = "README.md"
keywords = ["regression", "math", "linearalgebra", "precision"]

[dependencies]
itertools = "0.10.0"